fix(index.css): add overflow-x hidden for app

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@
 
     main {
         @apply min-h-screen relative bg-primary;
+        overflow-x: hidden;
     }
 
     header {
